--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .DS_Store
 node_modules/
-dist/
 lib/
 demo/
 npm-debug.log
@@ -13,3 +12,8 @@ yarn-error.log
 *.ntvs*
 *.njsproj
 *.sln
+
+
+dist/apsisx-calendar.common.js
+dist/apsisx-calendar.umd.js
+dist/demo.html
