--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 node_modules/
+src/
 lib/
 demo/
 npm-debug.log
@@ -12,8 +13,3 @@ yarn-error.log
 *.ntvs*
 *.njsproj
 *.sln
-
-
-dist/apsisx-calendar.common.js
-dist/apsisx-calendar.umd.js
-dist/demo.html
